--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
       - name: Setup Node
-        uses: action/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: "16"
       - name: Install Dependencies
         run: npm ci
       - name: Build Project
         run: npm run build
-        
+
 
