--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Github Action No. 2
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:   #Allows us to run workflows from UI
 
 permissions:
   contents: read
